--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__/*
 pycocotools/*
 dataset/COCO/*
 dataset/VOC/*
+dataset/Citycam/*
+dataset/DETRAC/*
 dataset/__pycache__/*
 models/__pycache__/*
 experiment/*
